tests/fixtures/fail/layout_intrinsic_reserved_name.sc
let size_of(value: i32): u64 = { 0 }

let main(): i32 = { 0 }
